DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2002-12-02 browner      we now depend on cal3d and use animations.
2002-12-02 browner      we now depend on cppdom and use xml for our level file 
                        format as well as for the level loader.
2002-11-25 nonchocoboy  Display the version number on the menu screen.
2002-11-25 nonchocoboy  Pistol now emits a sound and casings.
2002-11-25 nonchocoboy  Refactored ResourceManager to do the caching work that
                        used to be relegated to the TextureManager.
                        TextureManager has been removed.
2002-11-14 aegis        Bump version to 1.0.0.
2002-11-15 aegis        Upgrade to Audiere 1.9.1.
2002-11-13 all          A whole ton of changes for the 1.0 (IGF) release.
2002-11-10 nonchocoboy  Fixed the sweep collision detector. Objects can no
                        longer "stick" to objects they have collided with.
                        NEW VERSION: 0.4.0
2002-11-05 browner      factored out the ai testing and command stuff into its
                        own file to clean up GameState.cpp and GameState.h
2002-11-03 nonchocoboy  CollisionDetector algorithms now report all collisions
                        found rather than just the best one.
2002-11-02 nonchocoboy  Decoupled level loading and the GameState.
2002-11-01 nonchocoboy  Added in a temporally coherant collision detector using
                        an AABox sweep test.
                        NEW VERSION: 0.3.1
2002-10-31 aegis        Added Game Over screen, player health, and some
                        basic collision responses.
2002-10-31 aegis        Added new collision detection architecture.
2002-10-31 nonchocoboy  Added a cache for textures loaded onto the video card.
2002-10-30 nonchocoboy  Updated control to a chase camera with mouse-look.
2002-10-29 temyrr       Changed resolution to 1024 x 768